ビルド処理修正

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "Minify(mch-team-code)",
             "type": "shell",
-            "command": "npx google-closure-compiler --js=mch-team-code-bookmarklet.js --js_output_file=mch-team-code-bookmarklet.min.js",
+            "command": "npx google-closure-compiler --js=mch-team-code-bookmarklet.js --js_output_file=mch-team-code-bookmarklet.min.js && sed -i '1s/^/javascript:/' mch-team-code-bookmarklet.min.js",
             "group": {
                 "kind": "build",
                 "isDefault": false
@@ -16,7 +16,7 @@
         {
             "label": "Minify(mch-craft-shortage))",
             "type": "shell",
-            "command": "npx google-closure-compiler --js=mch-craft-shortage-bookmarklet.js --js_output_file=mch-craft-shortage-bookmarklet.min.js",
+            "command": "npx google-closure-compiler --js=mch-craft-shortage-bookmarklet.js --js_output_file=mch-craft-shortage-bookmarklet.min.js && sed -i '1s/^/javascript:/' mch-craft-shortage-bookmarklet.min.js",
             "group": {
                 "kind": "build",
                 "isDefault": false
