--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,6 +22,26 @@
                 "isDefault": false
             },
             "problemMatcher": []
+        },
+        {
+            "label": "Minify(mch-lab-buyer))",
+            "type": "shell",
+            "command": "npx google-closure-compiler --js=mch-lab-buyer-bookmarklet.js --js_output_file=mch-lab-buyer-bookmarklet.min.js && sed -i '1s/^/javascript:/' mch-lab-buyer-bookmarklet.min.js",
+            "group": {
+                "kind": "build",
+                "isDefault": false
+            },
+            "problemMatcher": []
+        },
+        {
+            "label": "Minify(mch-lab-seller))",
+            "type": "shell",
+            "command": "npx google-closure-compiler --js=mch-lab-seller-bookmarklet.js --js_output_file=mch-lab-seller-bookmarklet.min.js && sed -i '1s/^/javascript:/' mch-lab-seller-bookmarklet.min.js",
+            "group": {
+                "kind": "build",
+                "isDefault": false
+            },
+            "problemMatcher": []
         }
     ]
 }
